# particle_filter_detector

./: .gitattributes  README.md
ros_float/: CMakeLists.txt  package.xml
ros_float/config/: EKF_PF_together.rviz  au_au.yaml  cov_config.yaml  ekf_at_work_correctly.rviz  ekf_final_tuning.rviz  noise_settings.yaml  pf_config.rviz  pf_config_first_order.rviz  rviz_frame_usbl.rviz  rviz_moving_reference_frame.rviz  rviz_rl.rviz  rviz_robot_loc_correct.rviz  viewFloaturdf.rviz  waterdepth_settings.yaml
ros_float/doc/: Doxyfile
ros_float/doc/html/: alt__reader_8h_source.html  annotated.html  classALT__reader-members.html  classALT__reader.html  classALT__reader__coll__graph.map  classALT__reader__coll__graph.md5  classCOMMAND__reader-members.html  classCOMMAND__reader.html  classCOMMAND__reader__coll__graph.map  classCOMMAND__reader__coll__graph.md5  classGPS__reader-members.html  classGPS__reader.html  classGPS__reader__coll__graph.map  classGPS__reader__coll__graph.md5  classKeller__reader-members.html  classKeller__reader.html  classKeller__reader__coll__graph.map  classKeller__reader__coll__graph.md5  classSTATE__reader-members.html  classSTATE__reader.html  classSTATE__reader__coll__graph.map  classSTATE__reader__coll__graph.md5  classUM6__reader-members.html  classUM6__reader.html  classUM6__reader__coll__graph.map  classUM6__reader__coll__graph.md5  classUSBL__reader-members.html  classUSBL__reader.html  classUSBL__reader__coll__graph.map  classUSBL__reader__coll__graph.md5  classes.html  classio_1_1ByteSourceBase-members.html  classio_1_1ByteSourceBase.html  classio_1_1ByteSourceBase__inherit__graph.map  classio_1_1ByteSourceBase__inherit__graph.md5  classio_1_1CSVReader-members.html  classio_1_1CSVReader.html  classio_1_1CSVReader__coll__graph.map  classio_1_1CSVReader__coll__graph.md5  classio_1_1LineReader-members.html  (+173 more)
ros_float/doc/latex/: annotated.tex  classALT__reader.tex  classALT__reader__coll__graph.md5  classCOMMAND__reader.tex  classCOMMAND__reader__coll__graph.md5  classGPS__reader.tex  classGPS__reader__coll__graph.md5  classKeller__reader.tex  classKeller__reader__coll__graph.md5  classSTATE__reader.tex  classSTATE__reader__coll__graph.md5  classUM6__reader.tex  classUM6__reader__coll__graph.md5  classUSBL__reader.tex  classUSBL__reader__coll__graph.md5  classio_1_1ByteSourceBase.tex  classio_1_1ByteSourceBase__inherit__graph.md5  classio_1_1CSVReader.tex  classio_1_1CSVReader__coll__graph.md5  classio_1_1LineReader.tex  classio_1_1LineReader__coll__graph.md5  classio_1_1detail_1_1AsynchronousReader.tex  classio_1_1detail_1_1NonOwningIStreamByteSource.tex  classio_1_1detail_1_1NonOwningIStreamByteSource__coll__graph.md5  classio_1_1detail_1_1NonOwningIStreamByteSource__inherit__graph.md5  classio_1_1detail_1_1NonOwningStringByteSource.tex  classio_1_1detail_1_1NonOwningStringByteSource__coll__graph.md5  classio_1_1detail_1_1NonOwningStringByteSource__inherit__graph.md5  classio_1_1detail_1_1OwningStdIOByteSourceBase.tex  classio_1_1detail_1_1OwningStdIOByteSourceBase__coll__graph.md5  classio_1_1detail_1_1OwningStdIOByteSourceBase__inherit__graph.md5  classio_1_1detail_1_1SynchronousReader.tex  classsimulationParser.tex  dir_1ff387876de86cd81c8b4b965f1362e7.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  refman.tex  structALT__DATA.tex  structCOMMAND__DATA.tex  (+71 more)
ros_float/include/filter_interface/: main.cpp  particlefiltermaingui.cpp  particlefiltermaingui.h  particlefiltermaingui.ui
ros_float/include/imu_filter_madgwick/: csv.h  madgwick_filter.cpp  madgwick_filter.h
ros_float/include/ros_ekf/: ekf_water_depth.cpp  ekf_water_depth.h
ros_float/include/ros_float/: alt_reader.cpp  alt_reader.h  bathymetry_preprocessor.cpp  bathymetry_preprocessor.h  cam_reader.cpp  cam_reader.h  command_reader.cpp  command_reader.h  global_t_stamp.h  gps_reader.cpp  gps_reader.h  keller_reader.cpp  keller_reader.h  state_reader.cpp  state_reader.h  um6_reader.cpp  um6_reader.h  uncertainty_preprocessor.cpp  uncertainty_preprocessor.h  usbl_reader.cpp  usbl_reader.h  usbl_relativereference_reader.cpp  usbl_relativereference_reader.h  utility.cpp  utility.h  waterdepthmarker_postprocessor.cpp  waterdepthmarker_postprocessor.h  zone_converter.cpp  zone_converter.h
ros_float/include/ros_pf/: particle_filetr_param.cpp  particle_filetr_param.h  pf_first_order.cpp  pf_first_order.h  pf_second_order.cpp  pf_second_order.h  pf_second_order_bis.cpp  pf_second_order_bis.h  pf_second_order_water_depth.cpp  pf_second_order_water_depth.h  pf_third_order.cpp  pf_third_order.h
ros_float/launch/: floatModel_urdf.launch  float_localization.launch  float_madgwick.launch  unc_preprocessor.launch
ros_float/msg/alt_data_message/: altitude.msg  good.msg
ros_float/msg/cam_message/: alt.msg  distance.msg  dt.msg  imnum.msg  std_X_distance.msg  std_Y_distance.msg  stdalt.msg  stddistance.msg  surveytime.msg  xdistance.msg  ydistance.msg
ros_float/msg/ctl_command_message/: abort.msg  actuator_mode.msg  alt_ref.msg  altitude_check_depth.msg  ctl_active.msg  ctl_modeFromCommand.msg  depth_ref.msg  est_water_depth.msg  fake_altimeter.msg  neutral_volume.msg  thrust_offset.msg  thrust_ref.msg  vel_ref.msg  volume_ref.msg
ros_float/msg/ctl_state_message/: altitudeState.msg  ctl_force.msg  ctl_force_high.msg  ctl_force_low.msg  ctl_mode.msg  ctl_status.msg  (+8 more)
ros_float/pf_launch/: pf.launch  pf_first_order.launch  pf_second_order.launch  pf_second_order_bis.launch  pf_second_order_water_depth.launch  pf_third_order.launch
ros_float/python/: pf_transform_pose.py  trajectory_marker_EKF.py  trajectory_marker_PF.py  transform_gps_pose.py  transform_particle_filter_pose.py  transform_pose.py
ros_float/src/: ekf_water_depth_node.cpp  floatlog2bag.cpp  madgwick_filter_node.cpp  particlefiltermaingui_node.cpp  pf_first_order_node.cpp  pf_node.cpp  pf_second_order_bis_node.cpp  pf_second_order_node.cpp  pf_second_order_water_depth_node.cpp  pf_third_order_node.cpp  unc_preprocessor_node.cpp  utm_node.cpp
ros_float/urdf/: floatModel.urdf
(+65 files in other folders)
